--- a/src/main/resources/templates/claimLeave.html
+++ b/src/main/resources/templates/claimLeave.html
@@ -1,44 +1,63 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/layout.html :: html_head" />
-<body>
+<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">>    -->
+
+
+<style>
+
+    #main {
+      display: flex;
+      justify-content: center;
+      padding-top: 2%;
+    }
+      </style>
+
+<body onload="set_time()">
     <div th:replace="fragments/layout.html :: header" />
     <div th:replace="fragments/layout.html :: menu" />
     
-    <h3>Compensational Leave Claiming Form</h3>
+    <div class = "container">
+        <div class = "row">
+            <div class = "col-lg-6 col-sm-6 container justify-content-center card">
+                <div id="main">
+                    <h4>Compensation Leave Claim Form</h4>
+                </div>
     
-    <form action="#" th:action="@{/staff/compensation/claimLeave}"
-        th:object="${compensation}" method="post">
 
-        <table class="framed" >
+        <table class="table4" >
+        <form action="#" th:action="@{/staff/compensation/claimLeave}" th:object="${compensation}" method="post">
            
             <tr>
                 <th>OT Start Time</th>
-                <td><input type="datetime-local" th:field="*{OTstartTime}" /></td>
-                <td th:if="${#fields.hasErrors('OTstartTime')}" th:errors="*{OTstartTime}"></td>
+                <td><input type="datetime-local" th:field="*{OTstartTime}" class="form-control" /></td>              
+                <td style='color:red'><span th:if="${#fields.hasErrors('OTstartTime')}" th:errors="*{OTstartTime}"></span> </td>
             </tr>
 
             <tr>
                 <th>OT End Time</th>
                 <td><input type="datetime-local" th:field="*{OTendTime}" /></td>
-                <td th:if="${#fields.hasErrors('OTendTime')}" th:errors="*{OTendTime}"></td>
+                <td></td>
+                <td style='color:red'><span th:if="${#fields.hasErrors('OTendTime')}" th:errors="*{OTendTime}"></span></td>
             </tr>
 
             <tr>
                 <th>Description</th>
-                <td><textarea maxlength="200" type="uText" th:field="*{description}" placeholder="Please write your description here"/></textarea>
-                <td th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></td>
+                <td><textarea maxlength="200" type="uText" th:field="*{description}" placeholder="Please write your description here"/></textarea>              
+                <td></td>
+                <td style='color:red'><span th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></span></td>
             </tr>
             
             <tr><td>
+                <button type="submit" class = "btn btn-primary btn-sm">Create</button>
+                <button type="reset" class = "btn btn-primary btn-sm">Reset</button>
+<!-- 
                 <input type="submit" value="Create" class="blcass" />
-                <input type="reset" value="Reset" class="blcass" />
+                <input type="reset" value="Reset" class="blcass" /> -->
             </td></tr>
             
         </table>
 
     </form>
-
-    <div th:replace="fragments/layout.html :: footer" />
 </body>
 </html>
