--- a/src/main/resources/templates/editLeave.html
+++ b/src/main/resources/templates/editLeave.html
@@ -2,6 +2,16 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head th:replace="fragments/layout.html :: html_head" />
+<style>
+
+    #main {
+      display: flex;
+      justify-content: center;
+      padding-top: 2%;
+    }
+      </style>
+
+
 <body onload="set_time()">
     <div th:replace="fragments/layout.html :: header" />
     <div th:replace="fragments/layout.html :: menu" />
@@ -9,51 +19,56 @@
     <div class = "container">
         <div class = "row">
             <div class = "col-lg-6 col-sm-6 container justify-content-center card">
-                <h2>Edit Leave Application Form</h2>
-                <div class = "card-body">
+                
+                <div id="main">
+                    <h4>Edit Leave Application Form</h4>
+                </div>
+                
+                <table class = "table4">
                     <form th:action="@{/staff/leave/edit/{id}(id=${leave.leaveId})}" th:object="${leave}" method="post">
                         
-                        <div class="form-group">
-                            <label> Leave ID : </label>
-                            <input type="text" name= leaveId th:value="*{leaveId}" class="form-control" readonly/>
-                        </div>
+                        <tr>
+                            <th>Leave Id</th>
+                            <td><input type="text" name= leaveId th:value="*{leaveId}" class="form-control" readonly/></td>
+                        </tr>
 
-                        <div class="form-group">
-                            <label> Start Date : </label>
-                            <input type="date" id="editLeaveStartDate" name= startDate th:field="*{startDate}" class="form-control" placeholder="Choose Start Date" />
-                            <script type="text/javascript">editLeaveStartDate.min=new Date().toISOString().split("T")[0];</script>
-                            <span th:if="${#fields.hasErrors('startDate')}" 
-                            th:errors="*{startDate}"></span>
-                        </div>
+                        <tr>
+                                <th> Start Date</th>
+                                <td><input type="date" id="editLeaveStartDate" name= startDate th:field="*{startDate}" class="form-control" placeholder="Choose Start Date" /></td>
+                                <script type="text/javascript">editLeaveStartDate.min=new Date().toISOString().split("T")[0];</script>
+                            <td style='color:red'><span th:if="${#fields.hasErrors('startDate')}" th:errors="*{startDate}"></span></td>
+                        </tr>
 
-                        <div class="form-group">
-                            <label> End Date : </label>
-                            <input type="date" id="editLeaveEndDate" name= endDate th:field="*{endDate}" class="form-control" placeholder="Choose Start Date"/>
+                        <tr>
+                                <th> End Date</th>
+                                <td><input type="date" id="editLeaveEndDate" name= endDate th:field="*{endDate}" class="form-control" placeholder="Choose Start Date"/></td>
                             <!-- <script type="text/javascript">editLeaveEndDate.min=new Date().toISOString().split("T")[0];</script> -->
-                            <span th:if="${#fields.hasErrors('endDate')}"
-                            th:errors="*{endDate}"></span>
-                        </div>
+                            <td style='color:red'><span th:if="${#fields.hasErrors('endDate')}" th:errors="*{endDate}"></span></td>
+                        </tr>
 
-                        <div class="form-group">
-                            <lable>Leave Type :</lable>
-                            <select th:field="*{leaveType}" class="form-control" > 
+                        <tr>
+                            <th> Leave Type </th>
+                            <td><select th:field="*{leaveType}" class="form-control" > 
                                 <option value="ANNUAL" th:text="ANNUAL"></option>
                                 <option value="MEDICAL" th:text="MEDICAL"></option>
                                 <option value="COMPENSATION" th:text="COMPENSATION"></option>
-                            </select>
-                        </div>             
+                            </select></td>
+                        </tr>  
                         
-                        <div class="form-group">                      
-                            <label> Reason: </label>
-                            <textarea th:field="*{reason}" rows= "5" cols="40" class="form-control"></textarea>
-                            <span th:if="${#fields.hasErrors('reason')}"
-                            th:errors="*{reason}" ></span>
-                        </div>
+                        
+                        <tr>                      
+                            <th> Reason</th>
+                                <td><textarea th:field="*{reason}" rows= "5" cols="40" class="form-control"></textarea>
+                            </td>
+                            <td style='color:red' ><span th:if="${#fields.hasErrors('reason')}" th:errors="*{reason}" ></span>
+                            </td>
+                        </tr>
 
-                        <div class="box-footer">
-                          <button type="submit" class = "btn btn-primary btn-sm">Submit</button>
-                        </div>
+                        <tr>
+                            <td></td><td><button type="submit">Submit</button></td>
+                        </tr>
                     </form>
+                    </table>
                 </div>
             </div>
         </div>
