--- a/src/main/resources/templates/employee-list.html
+++ b/src/main/resources/templates/employee-list.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" 
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" 
   integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" 
-  crossorigin="anonymous">
+  crossorigin="anonymous"> -->
   <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
   <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 
@@ -14,15 +14,19 @@
   <div th:replace="fragments/layout.html :: header"/> 
 
   
-<div align="left" class="container my-2">
-  <h3>Employee List page</h3>
-  <a th:href="@{/admin/employee/create}" class="btn btn-primary">Add Employee</a>
-  <a th:href="@{/admin/employee/export/csv}"><i class=" btn btn-dark px-4">Generate Report</i></a>
+  <div class = "tabinator">
+    <input type = "radio" id = "tab1" name = "tabs" checked>
+    <label for = "tab1">Public Holiday List</label>
+    <label for = "tab2"><a th:href="@{/admin/employee/create}">Add Employee</span></a></label>
+    <label for = "tab3"><a th:href="@{/admin/employee/export/csv}">Generate Report</span></a></label>
+    <div id = "content1">
+        <div>
+            <h4>List of Employee</h4>
+        </div>
 
   <div th:if="${not #lists.isEmpty(employees)}" >
     
-    <table style="border: 1" class="table table-striped table-responsive-md">
-      <tr class="listHeading">
+    <table class="table1">
         <th><a th:href="@{'/admin/employee/list/page/' + ${currentPage} + '?sortField=name&sortDir=' + ${reverseSortDir}+'&pageSize='+${pageSize}}">
         <span th:text="#{fieldLabel.employeeName}">
         </span></a></th>
