--- a/src/main/resources/templates/holiday-list.html
+++ b/src/main/resources/templates/holiday-list.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" 
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="fragments/layout.html :: html_head"/>
+<body>
+    <div th:replace="fragments/layout.html :: header"/>
+    <div th:replace="fragments/layout.html :: menu"/>
+
+<head> 
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" 
   integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" 
-  crossorigin="anonymous">
+  crossorigin="anonymous"> -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" 
   type="text/css" 
   href="https://cdn.datatables.net/v/bs4/dt-1.13.1/datatables.min.css"/>
 
-<head>
+  <div class = "tabinator">
+    <input type = "radio" id = "tab1" name = "tabs" checked>
+    <label for = "tab1">Public Holiday List</label>
+    <label for = "tab2"><a th:href="@{/admin/holidays/create}">Add Public Holiday</span></a></label>
+    <label for = "tab3"><a th:href="@{/admin/holidays/export/csv}">Generate Report</span></a></label>
+    <div id = "content1">
+        <div>
+            <h4>Public Holiday</h4>
+        </div>
+        
+        <div th:if="${not #lists.isEmpty(pubs)}">
 
-<head th:replace="fragments/layout.html :: html_head"/>
-<body>
-  <div th:replace="fragments/layout.html :: menu"/>
-  <div th:replace="fragments/layout.html :: header"/> 
-<div align="left" class="container my-2">
-  <h3>Public Holiday page</h3>
-  <a th:href="@{/admin/holidays/create}" class="btn btn-primary">Add Public Holiday</a>
-  <a th:href="@{/admin/holidays/export/csv}"><i class=" btn btn-dark px-4">Generate Report</i></a>
-  <div th:if="${not #lists.isEmpty(pubs)}">
-
-    <table style="border: 1" class="table table-striped table-responsive-md" id="holidaytable">
-      <thead>
-        <tr class="listHeading">
+          <table class="table1" id="holidaytable">
+            <thead>
           <th><span th:text="#{fieldLabel.localName}"></span></th>
           <th><span th:text="#{fieldLabel.holidayName}"></span></th>
           <th><span th:text="#{fieldLabel.holidayDate}"></span></th>
@@ -36,10 +42,12 @@
           <td th:text="${holid.name}">Name</td>
           <td th:text="${holid.date}">Date</td>
 
-          <td><a th:href="@{/admin/holidays/edit/}+${holid.id}"
-            class="btn btn-info"><span th:text="#{caption.edit}"></span></a>
-          <a th:href="@{/admin/holidays/delete/}+${holid.id}"
-            class="btn btn-danger"><span th:text="#{caption.delete}"></span></a></td>
+          <td>
+            
+          <a th:href="@{/admin/holidays/edit/}+${holid.id}"><i class="fa fa-pencil"></i></span></a>
+          <a th:href="@{/admin/holidays/delete/}+${holid.id}"><i class="fa fa-trash-o"></i></span></a>
+          
+          </td>
         </tr>
       </tbody>
     </table>
